--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
+  <title>TOP Landing Page</title>
  </head>
  <body>
   <header>
@@ -20,7 +20,7 @@
    <div class="one-left">
     <h2>This website is AWESOME</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatum aspernatur assumenda dolore ullam labore suscipit saepe voluptas odio a.</p>
-    <button>Sign Up</button>
+    <button class="one-btn">Sign Up</button>
    </div>
    <div class="one-right">
     img placeholder
@@ -29,15 +29,31 @@
   <section class="two">
    <h3>Some Random Information</h3>
    <div class="boxes">
-    <div>Box 1</div>
-    <div>Box 2</div>
-    <div>Box 3</div>
-    <div>Box 4</div>
+    <div class="box">
+     <p>
+      Lorem ipsum dolor sit, amet.
+     </p>
+    </div>
+    <div class="box">
+     <p>
+      Lorem ipsum dolor sit amet.
+     </p>
+    </div>
+    <div class="box">
+     <p>
+      Lorem ipsum dolor sit amet.
+     </p>
+    </div>
+    <div class="box">
+     <p>
+      Lorem ipsum dolor sit amet.
+     </p>
+    </div>
    </div>
   </section>
   <section class="three">
-   <p>This is an inspring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-   <p>-Thor, God of Thunder</p>
+   <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+   <p><strong>-Thor, God of Thunder</strong></p>
   </section>
   <section class="four">
    <div class="container">
@@ -46,7 +62,7 @@
      <p>Sign up for our product by clicking that blue learn more button!</p>
     </div>
     <div class="cont-right">
-     <button>Learn More</button>
+     <button class="cont-btn">Learn More</button>
     </div>
    </div>
   </section>
