--- a/index.html
+++ b/index.html
@@ -9,24 +9,28 @@
  </head>
  <body>
   <header>
-   <div class="logo">img placeholder</div>
-   <ul>
-    <li><a href="#">Link One</a></li>
-    <li><a href="#">Link Two</a></li>
-    <li><a href="#">Link Three</a></li>
-   </ul>
+   <div class="header-content">
+    <div class="logo">img placeholder</div>
+    <ul>
+     <li><a href="#">Link One</a></li>
+     <li><a href="#">Link Two</a></li>
+     <li><a href="#">Link Three</a></li>
+    </ul>
+   </div> 
   </header>
-  <section class="one">
-   <div class="one-left">
-    <h2>This website is AWESOME</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatum aspernatur assumenda dolore ullam labore suscipit saepe voluptas odio a.</p>
-    <button class="one-btn">Sign Up</button>
-   </div>
-   <div class="one-right">
-    img placeholder
-   </div>
+  <section class="section-one">
+   <div class="sect-one-content">
+    <div class="section-one-left">
+     <h2>This website is AWESOME</h2>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatum aspernatur assumenda dolore ullam labore suscipit saepe voluptas odio a.</p>
+     <button class="section-one-btn">Sign Up</button>
+    </div>
+    <div class="section-one-right">
+     img placeholder
+    </div>
+   </div> 
   </section>
-  <section class="two">
+  <section class="section-two">
    <h3>Some Random Information</h3>
    <div class="boxes">
     <div class="box">
@@ -51,11 +55,13 @@
     </div>
    </div>
   </section>
-  <section class="three">
-   <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-   <p><strong>-Thor, God of Thunder</strong></p>
+  <section class="section-three">
+   <div class="quote-cont">
+    <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+    <p class="signature"><strong>-Thor, God of Thunder</strong></p>
+   </div> 
   </section>
-  <section class="four">
+  <section class="section-four">
    <div class="container">
     <div class="cont-left">
      <h3>Call to Action! It's Time!</h3>
