Create figures in Section 2 Place boxes with text underneath into a figure element so text stays under the box itself.

--- a/index.html
+++ b/index.html
@@ -33,26 +33,22 @@
   <section class="section-two">
    <h3>Some Random Information</h3>
    <div class="boxes">
-    <div class="box">
-     <p>
-      Lorem ipsum dolor sit, amet.
-     </p>
-    </div>
-    <div class="box">
-     <p>
-      Lorem ipsum dolor sit amet.
-     </p>
-    </div>
-    <div class="box">
-     <p>
-      Lorem ipsum dolor sit amet.
-     </p>
-    </div>
-    <div class="box">
-     <p>
-      Lorem ipsum dolor sit amet.
-     </p>
-    </div>
+    <figure>
+     <div class="box"></div>
+     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+    </figure>
+    <figure>
+     <div class="box"></div>
+     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+    </figure>
+    <figure>
+     <div class="box"></div>
+     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+    </figure>
+    <figure>
+     <div class="box"></div>
+     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+    </figure>
    </div>
   </section>
   <section class="section-three">
