--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
  <body>
   <header>
    <div class="header-content">
-    <div class="logo">img placeholder</div>
+    <div class="logo">
+     <img src="./img/misty-trees-2.jpg" alt="Misty Trees">
+    </div>
     <ul>
-     <li><a href="#">Link One</a></li>
-     <li><a href="#">Link Two</a></li>
-     <li><a href="#">Link Three</a></li>
+     <li><a href="#">Old Trees</a></li>
+     <li><a href="#">New Trees</a></li>
+     <li><a href="#">Dead Trees</a></li>
     </ul>
    </div> 
   </header>
@@ -22,32 +24,40 @@
    <div class="sect-one-content">
     <div class="section-one-left">
      <h2>This website is AWESOME</h2>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatum aspernatur assumenda dolore ullam labore suscipit saepe voluptas odio a.</p>
-     <button class="section-one-btn">Sign Up</button>
+     <p>It has some nifty looking trees on it to fill up space and help learn responsiveness!</p>
+     <button class="section-one-btn">Just a Button</button>
     </div>
     <div class="section-one-right">
-     img placeholder
+     <img src="./img/two-trees.jpg" alt="Landing Page Result">
     </div>
    </div> 
   </section>
   <section class="section-two">
-   <h3>Some Random Information</h3>
+   <h3>Look at these cool trees</h3>
    <div class="boxes">
     <figure>
-     <div class="box"></div>
-     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+     <div class="box">
+      <img src="./img/dark-trees.jpg" alt="">
+     </div>
+      <figcaption>These are all different looking trees</figcaption>
     </figure>
     <figure>
-     <div class="box"></div>
-     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+     <div class="box">
+      <img src="./img/misty-trees.jpg" alt="">
+     </div>
+      <figcaption>These are all different looking trees</figcaption>
     </figure>
     <figure>
-     <div class="box"></div>
-     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+     <div class="box">
+      <img src="./img/trees-on-slope.jpg" alt="">
+     </div>
+      <figcaption>These are all different looking trees</figcaption>
     </figure>
     <figure>
-     <div class="box"></div>
-     <figcaption>Lorem ipsum dolor sit, amet.</figcaption>
+     <div class="box">
+      <img src="./img/slanted-trees.jpg" alt="">
+     </div>
+      <figcaption>These are all different looking trees</figcaption>
     </figure>
    </div>
   </section>
@@ -60,8 +70,8 @@
   <section class="section-four">
    <div class="container">
     <div class="cont-left">
-     <h3>Call to Action! It's Time!</h3>
-     <p>Sign up for our product by clicking that blue learn more button!</p>
+     <h3>It's Time!</h3>
+     <p>If you like trees too you can try clicking that blue learn more button!</p>
     </div>
     <div class="cont-right">
      <button class="cont-btn">Learn More</button>
